[package]
name = "rust_tray"
version = "0.1.0"
authors = ["Ian Page Hands <iphands@gmail.com>"]
edition = "2018"

[[bin]]
name = "rust_tray"
path = "src/main.rs"

[[bin]]
name = "test_build"
path = "src/event_test.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
systray = "0.4.0"
libpulse-mainloop-glib-sys = "1.13.1"
libpulse-binding = "2.16.0"

