[package]
name = "rust_tray"
version = "0.2.0"
authors = ["Ian Page Hands <iphands@gmail.com>"]
edition = "2018"

[[bin]]
name = "rust_tray"
path = "src/main.rs"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 'z'
codegen-units = 1
panic = 'abort'
lto = true

[dependencies]
systray = "0.4.0"
libpulse-binding = "2.16"
clap = "2.33.1"
lazy_static = "1.4.0"